Hopefully fixed alignment

--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -110,6 +110,11 @@
     word-wrap: break-word;
 }
 
+/* aligning user text left */
+.left-align {
+    text-align: left;
+  }
+
 .userText span {
     line-height: 1.5em;
     display: inline-block;
